--- a/мантра.md
+++ b/мантра.md
@@ -1,18 +1,18 @@
-Шта су ми циљеви са овим пројектом?
+**Шта су ми циљеви са овим пројектом?**
   1. Једноставност
   2. Ток игре који је fiction-first
   3. Личне приче ликова (quest систем)
   4. Low Fantasy
-    * Conan the Barbarian, Conan the Destroyer
-    * Korgoth of Barbaria
-    * Krull
-    * Kull the Conqueror
-    * Dragonslayer
-    * Red Sonya
-    * The Throne of Fire
+     * Conan the Barbarian, Conan the Destroyer
+     * Korgoth of Barbaria
+     * Krull
+     * Kull the Conqueror
+     * Dragonslayer
+     * Red Sonya
+     * The Throne of Fire
   5. 2 dice систем, без +/-
 
-Како остварити ове циљеве?
+**Како остварити ове циљеве?**
   1. Правила везана само за несигурност при некој радњи ликова - као MOVES у DW
   2. 
   3.
